--- a/package.json
+++ b/package.json
@@ -3,14 +3,13 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "node ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~4.3.4",
     "express": "~4.18.1",
     "morgan": "~1.10.0",
-    "nodemon": "^2.0.19",
     "sqlite3": "^5.0.8"
   }
 }
